--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,80 @@ body{
     font-family:'Merriweather', 'sans-serif';
     width: 100%;
     display:flex;
-    
+    align-items: center;
     justify-content: center;
+ 
 }
+header img {
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 20px;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.367);
+}
+#mainTitle{
+    text-align: center;
+    font-size: 300px;
+    padding:10px;
+}
+.box{
+    width:50%;
+    background-color: rgb(46, 41, 41);
+    min-height: 70vh;
+    border-radius: 4px;
+    margin: 10%;
+    padding-bottom: 3.5rem;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.51),
+      -10px -10px 20px rgba(0, 0, 0, 0.275),
+      inset 5px 5px 15px rgba(63, 63, 63, 0.397);
+}
+
+header {
+    font-size: 1.2rem;
+    font-family: cursive;
+  }
+  header,
+  form {
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  form input,
+  form button {
+    margin:10px;
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    border: none;
+    background: white;
+  }
+  form input {
+    width: 43%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    outline: none;
+  }
+  form button {
+    color: white;
+    background-color: #f58634;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: 6%;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  form button:hover {
+    background-image: linear-gradient(315deg, #00af91  0%,  #f58634 74%);
+    color: white;
+  }
+  .todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .todo-list {
+    min-width: 60%;
+    list-style: none;
+    font-family: "Roboto", sans-serif !important;
+  }
+  
