--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ header img {
     background-color: rgb(46, 41, 41);
     min-height: 70vh;
     border-radius: 4px;
-    margin: 10%;
+    margin: 7%;
     padding-bottom: 3.5rem;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.51),
       -10px -10px 20px rgba(0, 0, 0, 0.275),
@@ -43,28 +43,28 @@ header {
     font-size: 1.2rem;
     font-family: cursive;
   }
-  header,
-  form {
+header,
+form {
     min-height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  form input,
-  form button {
+}
+form input,
+form button {
     margin:10px;
     padding: 0.5rem;
     font-size: 1.5rem;
     border: none;
     background: white;
-  }
-  form input {
+}
+form input {
     width: 43%;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     outline: none;
-  }
-  form button {
+}
+form button {
     color: white;
     background-color: #f58634;
     cursor: pointer;
@@ -72,19 +72,55 @@ header {
     width: 6%;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
-  }
-  form button:hover {
+}
+form button:hover {
     background-image: linear-gradient(315deg, #00af91  0%,  #f58634 74%);
     color: white;
-  }
-  .todo-container {
+}
+.todo-container {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .todo-list {
+}
+.todo-list {
     min-width: 60%;
     list-style: none;
     font-family: "Roboto", sans-serif !important;
-  }
-  
+}
+.todo {
+    margin: 1rem;
+    background: white;
+    color: black;
+    font-size: 1.3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
+    height: 40px;
+}
+.todo li {
+    flex: 1;
+}
+.todo-item {
+    padding: 0rem 0.5rem;
+}
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: none;
+}
+.select {
+    margin: 10px;
+    position: relative;
+    overflow: hidden;
+}
+select {
+    color: #f58634;
+    width: 10rem;
+    cursor: pointer;
+    padding: 0.75rem;
+    font-size: 1rem;
+    border-radius: 4px;
+}
