--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,3 +124,18 @@ select {
     font-size: 1rem;
     border-radius: 4px;
 }
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    background:#f58634;
+    top: 0;
+    right: 0;
+    pointer-events: none;
+    padding: 0.75rem;
+    transition: all 0.3s ease;
+}
+.select:hover::after {
+    background: white;
+    color: #f58634;
+    border-left: 1.3px solid rgba(0, 0, 0, 0.364);
+}
