--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,3 +139,30 @@ select {
     color: #f58634;
     border-left: 1.3px solid rgba(0, 0, 0, 0.364);
 }
+.trash-btn,
+.complete-btn {
+    color: white;
+    border: none;
+    cursor: pointer;
+    height: 100%;
+    width: 10%;
+}
+.complete-btn {
+    background-color: #7bfe8a;
+    background: linear-gradient(#7bfe8a , #57fe41);
+    font-size: 22px;
+    color: white;
+}
+.trash-btn {
+    background-color: #f58634;
+    font-size: 22px;
+    color: white;
+}
+.fa-trash,
+.fa-check {
+  pointer-events: none;
+}
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
