--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,3 +166,7 @@ select {
     text-decoration: line-through;
     opacity: 0.5;
 }
+.fall {
+    transform: translateY(12rem) rotateZ(20deg);
+    opacity: 0;
+}
