--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,8 @@ header img {
     margin-right: 20px;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.367);
 }
-#mainTitle{
+#main-title{
     text-align: center;
-    font-size: 300px;
     padding:10px;
 }
 .box{
