--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,47 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
-*{
-    margin:0;
-    padding:0;
+
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: #00af91;
-    background-image:linear-gradient(315deg, #00af91 0%, #f58634 75%);
-    color:white;
-    font-family:'Merriweather', 'sans-serif';
+    background-image: linear-gradient(315deg, #00af91 0%, #f58634 75%);
+    color: white;
+    font-family: 'Merriweather', 'sans-serif';
     width: 100%;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
- 
+
 }
+
 header img {
-    width:50px;
+    width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 20px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.367);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.367);
 }
-#main-title{
+
+#main-title {
     text-align: center;
-    padding:10px;
+    padding: 10px;
 }
-.box{
-    width:50%;
+
+.box {
+    width: 50%;
     background-color: rgb(46, 41, 41);
     min-height: 70vh;
     border-radius: 4px;
     margin: 7%;
     padding-bottom: 3.5rem;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.51),
-      -10px -10px 20px rgba(0, 0, 0, 0.275),
-      inset 5px 5px 15px rgba(63, 63, 63, 0.397);
+        -10px -10px 20px rgba(0, 0, 0, 0.275),
+        inset 5px 5px 15px rgba(63, 63, 63, 0.397);
 }
 
 header {
     font-size: 1.2rem;
     font-family: cursive;
-  }
+}
+
 header,
 form {
     min-height: 20vh;
@@ -49,20 +55,23 @@ form {
     justify-content: center;
     align-items: center;
 }
+
 form input,
 form button {
-    margin:10px;
+    margin: 10px;
     padding: 0.5rem;
     font-size: 1.5rem;
     border: none;
     background: white;
 }
+
 form input {
     width: 43%;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     outline: none;
 }
+
 form button {
     color: white;
     background-color: #f58634;
@@ -72,20 +81,24 @@ form button {
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
 }
+
 form button:hover {
-    background-image: linear-gradient(315deg, #00af91  0%,  #f58634 74%);
+    background-image: linear-gradient(315deg, #00af91 0%, #f58634 74%);
     color: white;
 }
+
 .todo-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .todo-list {
     min-width: 60%;
     list-style: none;
     font-family: "Roboto", sans-serif !important;
 }
+
 .todo {
     margin: 1rem;
     background: white;
@@ -97,12 +110,15 @@ form button:hover {
     transition: all 0.5s ease;
     height: 40px;
 }
+
 .todo li {
     flex: 1;
 }
+
 .todo-item {
     padding: 0rem 0.5rem;
 }
+
 select {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -110,11 +126,13 @@ select {
     outline: none;
     border: none;
 }
+
 .select {
     margin: 10px;
     position: relative;
     overflow: hidden;
 }
+
 select {
     color: #f58634;
     width: 10rem;
@@ -123,21 +141,24 @@ select {
     font-size: 1rem;
     border-radius: 4px;
 }
+
 .select::after {
     content: "\25BC";
     position: absolute;
-    background:#f58634;
+    background: #f58634;
     top: 0;
     right: 0;
     pointer-events: none;
     padding: 0.75rem;
     transition: all 0.3s ease;
 }
+
 .select:hover::after {
     background: white;
     color: #f58634;
     border-left: 1.3px solid rgba(0, 0, 0, 0.364);
 }
+
 .trash-btn,
 .complete-btn {
     color: white;
@@ -146,25 +167,30 @@ select {
     height: 100%;
     width: 10%;
 }
+
 .complete-btn {
     background-color: #7bfe8a;
-    background: linear-gradient(#7bfe8a , #57fe41);
+    background: linear-gradient(#7bfe8a, #57fe41);
     font-size: 22px;
     color: white;
 }
+
 .trash-btn {
     background-color: #f58634;
     font-size: 22px;
     color: white;
 }
+
 .fa-trash,
 .fa-check {
-  pointer-events: none;
+    pointer-events: none;
 }
+
 .completed {
     text-decoration: line-through;
     opacity: 0.5;
 }
+
 .fall {
     transform: translateY(12rem) rotateZ(20deg);
     opacity: 0;
