--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,10 @@
 body {
     background-color: #00af91;
     background-image: linear-gradient(315deg, #00af91 0%, #f58634 75%);
+    background-repeat: no-repeat;
     color: white;
     font-family: 'Merriweather', 'sans-serif';
+    min-height:100vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -23,6 +25,7 @@ header img {
     height: 50px;
     border-radius: 50%;
     margin-right: 20px;
+    margin-left:10px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.367);
 }
 
