--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,3 +198,7 @@ select {
     transform: translateY(12rem) rotateZ(20deg);
     opacity: 0;
 }
+#four-o-four a{
+    color:white;
+    text-decoration: none;
+}
