--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,8 @@ form {
 
 form input,
 form button {
-    margin: 10px;
-    padding: 0.5rem;
+    margin: 5px;
+    padding: 10px;
     font-size: 1.5rem;
     border: none;
     background: white;
@@ -83,8 +83,12 @@ form button {
     width: 6%;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    margin:5px;
 }
-
+label{
+    margin:5px;
+    font-size: 20px;
+}
 form button:hover {
     background-image: linear-gradient(315deg, #00af91 0%, #f58634 74%);
     color: white;
@@ -203,7 +207,19 @@ select {
     color: white;
     text-decoration: none;
 }
+#select{
+    min-height: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#input{
+    min-height: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+}
 @media screen and (max-width:1200px) {
     form button {
         color: white;
@@ -277,7 +293,7 @@ select {
         border: none;
         cursor: pointer;
         height: 100%;
-        width: 40%;
+        width: 20%;
     }
 
     .select {
