--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,7 @@ form button:hover {
 }
 
 .todo-list {
+    min-height: 2vh;
     min-width: 40%;
     list-style: none;
     font-family: "Roboto", sans-serif !important;
