--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ select {
 }
 
 select {
-    color: #f58634;
+    color: #000000;
     width: 10rem;
     cursor: pointer;
     padding: 0.75rem;
